# Engine

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  resources.rc
shaders/: FragmentShader.frag  VertexShader.vert
src/: Collision.rs  FragmentShader.frag  GL.rs  Global.rs  Math.rs  Object.rs  Settings.rs  Shader.rs  Vector.rs  Verbose.rs  Visual.rs  bin.rs  bin2.rs  lib.rs  shader.rs
src/Debug/: mod.rs
src/Global/: color.rs  mod.rs  position.rs  rotation.rs  scale.rs  size.rs  transform.rs  window.rs
src/Math/: Matrix.rs  mod.rs  vector.rs
src/Object/: camera.rs  mod.rs
