[package]
name = "Engine"
description = "A lightweight game framework for making games with minimum friction"
version = "0.1.5"
repository = "https://github.com/Alex-Velez/Engine"
keywords = ["engine", "graphics", "2D", "game"]
authors = ["Alexander Velez <alexandervelez7245@gmail.com>"]

edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["game-engines"]
build = "build.rs"

[[bin]]
name = "engine"
path = "src/bin.rs"

[dependencies]
glfw = "0.41.0"
gl = "0.14.0"
image = "0.23.14"
#gl33 = "0.1.1"

[build-dependencies]
embed-resource = "1.4.1"
